--- a/wp-content/themes/MortgageRates/style.css
+++ b/wp-content/themes/MortgageRates/style.css
@@ -1905,8 +1905,9 @@ footer .show-xs ul li a {
 }
 
 .navigation-wrapper:last-child {
-  border-bottom: none;
+  border-bottom: medium none;
   border-top: 1px solid #e9e9e9;
+  padding-bottom: 0;
 }
 
 .navigation-wrapper > ul {
