--- a/wp-content/themes/MortgageRates/style.css
+++ b/wp-content/themes/MortgageRates/style.css
@@ -1286,6 +1286,11 @@ footer .show-xs ul li a {
   color: #707070;
 }
 
+.footer-lists > div {
+  display: inline-block;
+  width: 19%;
+}
+
 /* Bottom ----------- */
 #bottom {
   color: #707070;
@@ -2700,12 +2705,12 @@ footer .show-xs ul li a {
 }
 
 #works-video h5 {
-  font-size: 15px;
-  margin: 0;
-  line-height: 26px;
   border-bottom: 1px solid #5fc0f1;
+  color: #303030;
+  font-size: 17px;
+  line-height: 26px;
+  margin: 0 0 10px;
   padding-bottom: 10px;
-  margin-bottom: 10px;
 }
 
 #works-video p {
