--- a/wp-content/themes/MortgageRates/style.css
+++ b/wp-content/themes/MortgageRates/style.css
@@ -572,10 +572,6 @@ input#submit:hover {
  width: 20%;
 }
 
-.nav-container nav ul li a {
-  display: block;
-}
-
 .nav-container nav > ul > li:first-child > a {
   border-radius: 0px 0px 0px 4px;
   -moz-border-radius: 0px 0px 0px 4px;
@@ -600,6 +596,14 @@ input#submit:hover {
   font-weight: bold;
   line-height: 55px;
   height: 55px;
+  display: block;
+}
+
+.nav-container nav ul li.menu-item-has-children > a,
+.nav-container nav ul li.menu-item-has-children > a:hover {
+  background-image: url("images/arrow-8.png");
+  background-repeat: no-repeat;
+  background-position: 95% 50%;
 }
 
 .nav-container nav ul li a:hover {
@@ -1522,15 +1526,14 @@ body .page + .post-share {
 
 .widget > h3,
 .aside-accordion .panel-title {
-  margin: 0;
   background-color: #e4f5ff;
   border-radius: 4px;
-  font-size: 14px;
   color: #003366;
+  font-size: 14px;
   height: 34px;
   line-height: 34px;
+  margin: 0 0 5px;
   padding: 0 10px;
-  margin-bottom: 15px;
 }
 
 .aside-accordion .panel-title:hover {
@@ -1582,6 +1585,24 @@ body .page + .post-share {
 
 .widget:last-child {
   margin-bottom: 0;
+}
+
+.widget.widget_nav_menu > h3 {
+  background-repeat: no-repeat;
+  background-position: 12px 50%;
+  padding-left: 35px;
+}
+
+.widget.widget_nav_menu:nth-child(1) > h3 {
+  background-image: url("images/icon-menu-1.png");
+}
+
+.widget.widget_nav_menu:nth-child(2) > h3 {
+  background-image: url("images/icon-menu-2.png");
+}
+
+.widget.widget_nav_menu:nth-child(3) > h3 {
+  background-image: url("images/icon-menu-3.png");
 }
 
 .widget article {
@@ -1687,6 +1708,37 @@ body .page + .post-share {
   margin: 0;
   color: #707070;
   margin-top: 10px;
+}
+
+.widget ul.menu {
+  list-style: none outside none;
+  margin-bottom: 0;
+  padding-left: 0;
+}
+
+.widget ul.menu li {
+  display: block;
+  position: relative;
+}
+
+.widget ul.menu li a {
+  display: block;
+  padding: 10px 15px;
+  position: relative;
+  border-radius: 4px;
+  color: #636363;
+}
+
+.widget ul.menu li.active a,
+.widget ul.menu li.current_page_item a {
+  color: #FFFFFF;
+  background-color: #a3de57;
+  font-weight: bold;
+}
+
+.widget ul.menu li a:hover {
+  background-color: #eee;
+  text-decoration: none;
 }
 
 /* Blog Detail Page ----------- */
@@ -3672,6 +3724,40 @@ body .page + .post-share {
 
   body.home .home-tip {
     float: none;width: 100%;
+  }
+
+  .widget.widget_nav_menu > h3 {
+    background-position: 12px 50%, 98% 50%;
+    background-repeat: no-repeat;
+    cursor: pointer;
+  }
+
+  .widget.widget_nav_menu:nth-child(1) > h3 {
+    background-image: url('images/icon-menu-1.png'), url('images/arrow-9.png');
+  }
+
+  .widget.widget_nav_menu:nth-child(2) > h3 {
+    background-image: url('images/icon-menu-2.png'), url('images/arrow-9.png');
+  }
+
+  .widget.widget_nav_menu:nth-child(3) > h3 {
+    background-image: url('images/icon-menu-3.png'), url('images/arrow-9.png');
+  }
+
+  .widget.widget_nav_menu > div {
+    display: none;
+  }
+
+  .widget.widget_nav_menu:nth-child(1) > h3.active  {
+    background-image: url('images/icon-menu-1.png'), url('images/arrow-10.png');
+  }
+
+  .widget.widget_nav_menu:nth-child(2) > h3.active  {
+    background-image: url('images/icon-menu-2.png'), url('images/arrow-10.png');
+  }
+
+  .widget.widget_nav_menu:nth-child(3) > h3.active  {
+    background-image: url('images/icon-menu-3.png'), url('images/arrow-10.png');
   }
 }
 
